--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -19,12 +19,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
         "from utils.helper import read_json\n",
-        "from utils.graph_reader import read_graph_instance, read_rakaj_graph_instance, read_graph_instance_networkrepo\n",
+        "from utils.graph_reader import read_graph_instance, read_rakaj_graph_instance\n",
         "from utils.graph import Graph\n",
         "\n",
         "from main.ilp_model import ilp_mwdds\n",
@@ -38,16 +38,14 @@
         "instances_s_pth = '../instances/small/'\n",
         "instances_m_pth = '../instances/medium/'\n",
         "instances_l_pth = '../instances/large/'\n",
-        "instances_xl_pth = '../instances/xlarge/'\n",
         "instances_s_dict = read_json('../instances/small/small_instances.json')\n",
         "instances_m_dict = read_json('../instances/medium/medium_instances.json')\n",
-        "instances_l_dict = read_json('../instances/large/large_instances.json')\n",
-        "instances_xl_list = os.listdir(instances_xl_pth)"
+        "instances_l_dict = read_json('../instances/large/large_instances.json')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -94,7 +92,7 @@
         "\n",
         "params = {\n",
         "    \"n_generations\":100,  \"population_size\":100, \"selection_method\":'tournament', \"crossover_probability\":0.9, \"mutation_probability\":0.01, \"mutation_increase_factor\":1.5, \"inc_mutation\":20,\n",
-        "    \"percent_to_remove\": 0.15, \"n_elite\": 2, \"tournament_size\": 3, \"two_point_crossover_prob\": 0.8\n",
+        "    \"n_elite\": 2, \"tournament_size\": 3, \"two_point_crossover_prob\": 0.8\n",
         "}\n",
         "\n",
         "for instance in test_instances:\n",
@@ -141,26 +139,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Running instance 0/Test/Problem.dat_50_50_0...\n",
-            "Finished 1 of 10 in 11.30378532409668 s\n",
-            "Finished 2 of 10 in 11.36411428451538 s\n",
-            "Finished 3 of 10 in 11.56542181968689 s\n",
-            "Finished 4 of 10 in 10.784418821334839 s\n",
-            "Finished 5 of 10 in 11.691102743148804 s\n",
-            "Finished 6 of 10 in 13.483954191207886 s\n",
-            "Finished 7 of 10 in 11.036206722259521 s\n",
-            "Finished 8 of 10 in 10.36756944656372 s\n",
-            "Finished 9 of 10 in 11.645784616470337 s\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "results = {\n",
         "    'instance': [],\n",
@@ -175,8 +156,8 @@
         "}\n",
         "\n",
         "params = {\n",
-        "    \"n_generations\":300,  \"population_size\":1000, \"selection_method\":'tournament', \"crossover_probability\":0.9, \"mutation_probability\":0.01, \"mutation_increase_factor\":1.5, \"inc_mutation\":50,\n",
-        "    \"percent_to_remove\": 0.15, \"n_elite\": 2, \"tournament_size\": 4, \"two_point_crossover_prob\": 0.95\n",
+        "    \"n_generations\":300,  \"population_size\":1000, \"selection_method\":'tournament', \"crossover_probability\":0.9, \"mutation_probability\":0.01, \"mutation_increase_factor\":1.5, \"inc_mutation\":60,\n",
+        "    \"n_elite\": 2, \"tournament_size\": 4, \"two_point_crossover_prob\": 0.95\n",
         "}\n",
         "\n",
         "for folder, instances in instances_s_dict.items():\n",
@@ -193,7 +174,7 @@
         "            graph.create_from_data(vertices_w, edges)\n",
         "            \n",
         "            for i in range(10):\n",
-        "                gen_algo = GeneticAlgorithm(graph=graph, fitness_fn=fitness_func, max_time=600, max_no_improvement=100, **params)\n",
+        "                gen_algo = GeneticAlgorithm(graph=graph, fitness_fn=fitness_func, max_time=600, max_no_improvement=300, **params)\n",
         "                gen_algo.run()\n",
         "                ga_results.append(gen_algo.previous_best_fitness)\n",
         "                ga_time.append(gen_algo.running_time)\n",
@@ -204,20 +185,15 @@
         "            results['ga_std'].append(round(std(ga_results), 6))\n",
         "            results['ga_time'].append(round(mean(ga_time), 4))\n",
         "\n",
-        "            # start = time.time()\n",
-        "            # greedy_ds, greedy_w = greedy_mwdds(vertices_w, edges)\n",
-        "            # results['greedy'].append(greedy_w)\n",
-        "            # results['greedy_time'].append(round(time.time() - start, 4))\n",
+        "            start = time.time()\n",
+        "            greedy_ds, greedy_w = greedy_mwdds(vertices_w, edges)\n",
+        "            results['greedy'].append(greedy_w)\n",
+        "            results['greedy_time'].append(round(time.time() - start, 4))\n",
         "            \n",
-        "            # start = time.time()\n",
-        "            # ilp_ds, ilp_w = ilp_mwdds(vertices_w, edges)\n",
-        "            # results['ilp'].append(ilp_w)\n",
-        "            # results['ilp_time'].append(round(time.time() - start, 4))\n",
-        "            results['greedy'].append(0)\n",
-        "            results['greedy_time'].append(0)\n",
-        "            results['ilp'].append(0)\n",
-        "            results['ilp_time'].append(0)\n",
-        "\n",
+        "            start = time.time()\n",
+        "            ilp_ds, ilp_w = ilp_mwdds(vertices_w, edges)\n",
+        "            results['ilp'].append(ilp_w)\n",
+        "            results['ilp_time'].append(round(time.time() - start, 4))\n",
         "\n",
         "current_time = datetime.datetime.now()\n",
         "formatted_time = current_time.strftime(\"%H-%M_%d-%m-%Y\")\n",
@@ -247,8 +223,8 @@
         "}\n",
         "\n",
         "params = {\n",
-        "    \"n_generations\":300,  \"population_size\":1000, \"selection_method\":'tournament', \"crossover_probability\":0.9, \"mutation_probability\":0.01, \"mutation_increase_factor\":1.5, \"inc_mutation\":60,\n",
-        "    \"percent_to_remove\": 0.15, \"n_elite\": 2, \"tournament_size\": 4, \"two_point_crossover_prob\": 0.95\n",
+        "    \"n_generations\":600,  \"population_size\":100, \"selection_method\":'tournament', \"crossover_probability\":0.9, \"mutation_probability\":0.01, \"mutation_increase_factor\":1.5, \"inc_mutation\":150,\n",
+        "    \"n_elite\": 2, \"tournament_size\": 4, \"two_point_crossover_prob\": 0.95\n",
         "}\n",
         "\n",
         "for folder, instances in instances_m_dict.items():\n",
@@ -265,7 +241,7 @@
         "            graph.create_from_data(vertices_w, edges)\n",
         "            \n",
         "            for i in range(10):\n",
-        "                gen_algo = GeneticAlgorithm(graph=graph, fitness_fn=fitness_func, max_time=600, max_no_improvement=100, **params)\n",
+        "                gen_algo = GeneticAlgorithm(graph=graph, fitness_fn=fitness_func, max_time=600, max_no_improvement=600, **params)\n",
         "                gen_algo.run()\n",
         "                ga_results.append(gen_algo.previous_best_fitness)\n",
         "                ga_time.append(gen_algo.running_time)\n",
@@ -276,19 +252,15 @@
         "            results['ga_std'].append(round(std(ga_results), 6))\n",
         "            results['ga_time'].append(round(mean(ga_time), 4))\n",
         "\n",
-        "            # start = time.time()\n",
-        "            # greedy_ds, greedy_w = greedy_mwdds(vertices_w, edges)\n",
-        "            # results['greedy'].append(greedy_w)\n",
-        "            # results['greedy_time'].append(round(time.time() - start, 4))\n",
+        "            start = time.time()\n",
+        "            greedy_ds, greedy_w = greedy_mwdds(vertices_w, edges)\n",
+        "            results['greedy'].append(greedy_w)\n",
+        "            results['greedy_time'].append(round(time.time() - start, 4))\n",
         "            \n",
-        "            # start = time.time()\n",
-        "            # ilp_ds, ilp_w = ilp_mwdds(vertices_w, edges)\n",
-        "            # results['ilp'].append(ilp_w)\n",
-        "            # results['ilp_time'].append(round(time.time() - start, 4))\n",
-        "            results['greedy'].append(0)\n",
-        "            results['greedy_time'].append(0)\n",
-        "            results['ilp'].append(0)\n",
-        "            results['ilp_time'].append(0)\n",
+        "            start = time.time()\n",
+        "            ilp_ds, ilp_w = ilp_mwdds(vertices_w, edges)\n",
+        "            results['ilp'].append(ilp_w)\n",
+        "            results['ilp_time'].append(round(time.time() - start, 4))\n",
         "\n",
         "current_time = datetime.datetime.now()\n",
         "formatted_time = current_time.strftime(\"%H-%M_%d-%m-%Y\")\n",
@@ -318,8 +290,8 @@
         "}\n",
         "\n",
         "params = {\n",
-        "    \"n_generations\":600,  \"population_size\":1000, \"selection_method\":'tournament', \"crossover_probability\":0.9, \"mutation_probability\":0.01, \"mutation_increase_factor\":1.5, \"inc_mutation\":100,\n",
-        "    \"percent_to_remove\": 0.15, \"n_elite\": 2, \"tournament_size\": 4, \"two_point_crossover_prob\": 0.95\n",
+        "    \"n_generations\":1000,  \"population_size\":1000, \"selection_method\":'tournament', \"crossover_probability\":0.9, \"mutation_probability\":0.01, \"mutation_increase_factor\":1.5, \"inc_mutation\":200,\n",
+        "    \"n_elite\": 2, \"tournament_size\": 4, \"two_point_crossover_prob\": 0.95\n",
         "}\n",
         "\n",
         "for folder, instances in instances_l_dict.items():\n",
@@ -336,7 +308,7 @@
         "            graph.create_from_data(vertices_w, edges)\n",
         "            \n",
         "            for i in range(10):\n",
-        "                gen_algo = GeneticAlgorithm(graph=graph, fitness_fn=fitness_func, max_time=600, max_no_improvement=200, **params)\n",
+        "                gen_algo = GeneticAlgorithm(graph=graph, fitness_fn=fitness_func, max_time=600, max_no_improvement=1000, **params)\n",
         "                gen_algo.run()\n",
         "                ga_results.append(gen_algo.previous_best_fitness)\n",
         "                ga_time.append(gen_algo.running_time)\n",
@@ -347,105 +319,20 @@
         "            results['ga_std'].append(round(std(ga_results), 6))\n",
         "            results['ga_time'].append(round(mean(ga_time), 4))\n",
         "            \n",
-        "            # start = time.time()\n",
-        "            # greedy_ds, greedy_w = greedy_mwdds(vertices_w, edges)\n",
-        "            # results['greedy'].append(greedy_w)\n",
-        "            # results['greedy_time'].append(round(time.time() - start, 4))\n",
+        "            start = time.time()\n",
+        "            greedy_ds, greedy_w = greedy_mwdds(vertices_w, edges)\n",
+        "            results['greedy'].append(greedy_w)\n",
+        "            results['greedy_time'].append(round(time.time() - start, 4))\n",
         "            \n",
-        "            # start = time.time()\n",
-        "            # ilp_ds, ilp_w = ilp_mwdds(vertices_w, edges)\n",
-        "            # results['ilp'].append(ilp_w)\n",
-        "            # results['ilp_time'].append(round(time.time() - start, 4))\n",
-        "            results['greedy'].append(0)\n",
-        "            results['greedy_time'].append(0)\n",
-        "            results['ilp'].append(0)\n",
-        "            results['ilp_time'].append(0)\n",
+        "            start = time.time()\n",
+        "            ilp_ds, ilp_w = ilp_mwdds(vertices_w, edges)\n",
+        "            results['ilp'].append(ilp_w)\n",
+        "            results['ilp_time'].append(round(time.time() - start, 4))\n",
         "\n",
         "current_time = datetime.datetime.now()\n",
         "formatted_time = current_time.strftime(\"%H-%M_%d-%m-%Y\")\n",
         "output_csv = f'../results/new/large_results_{formatted_time}.csv'\n",
         "output_params = f'../results/new/large_ga_params_{formatted_time}.json'\n",
-        "\n",
-        "save_results_to_csv(results, output_csv)\n",
-        "save_params_to_json(output_params, params)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "# Testiranje na XLARGE instancama"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "results = {\n",
-        "    'instance': [],\n",
-        "    'ga_mean': [],\n",
-        "    'ga_max': [],\n",
-        "    'ga_std': [],\n",
-        "    'ga_time': [],\n",
-        "    'greedy': [],\n",
-        "    'greedy_time': [],\n",
-        "    'ilp': [],\n",
-        "    'ilp_time': []\n",
-        "}\n",
-        "\n",
-        "params = {\n",
-        "    \"n_generations\":1500,  \"population_size\":2000, \"selection_method\":'tournament', \"crossover_probability\":0.9, \"mutation_probability\":0.01, \"mutation_increase_factor\":1.5, \"inc_mutation\":300,\n",
-        "    \"percent_to_remove\": 0.15, \"n_elite\": 3, \"tournament_size\": 4, \"two_point_crossover_prob\": 0.95\n",
-        "}\n",
-        "\n",
-        "for i in instances_xl_list:\n",
-        "    print(f'Running instance {i}...')\n",
-        "    instance_pth = os.path.join(instances_xl_pth, i)\n",
-        "    vertices_w, edges = read_graph_instance_networkrepo(instance_pth)\n",
-        "\n",
-        "    results['instance'].append(i.replace('.mtx', ''))\n",
-        "\n",
-        "    ga_results = []\n",
-        "    ga_time = []\n",
-        "    graph = Graph()\n",
-        "    graph.create_from_data(vertices_w, edges)\n",
-        "\n",
-        "    for i in range(10):\n",
-        "        gen_algo = GeneticAlgorithm(graph=graph, fitness_fn=fitness_func, max_time=600, max_no_improvement=500, **params)\n",
-        "        gen_algo.run()\n",
-        "        ga_results.append(gen_algo.previous_best_fitness)\n",
-        "        ga_time.append(gen_algo.running_time)\n",
-        "        print(f'Finished {i+1} of 10 in {gen_algo.running_time} s')\n",
-        "\n",
-        "\n",
-        "    results['ga_mean'].append(round(mean(ga_results),6))\n",
-        "    results['ga_max'].append(max(ga_results))\n",
-        "    results['ga_std'].append(round(std(ga_results), 6))\n",
-        "    results['ga_time'].append(round(mean(ga_time), 4))\n",
-        "\n",
-        "    # start = time.time()\n",
-        "    # greedy_ds, greedy_w = greedy_mwdds(vertices_w, edges)\n",
-        "    # results['greedy'].append(greedy_w)\n",
-        "    # results['greedy_time'].append(round(time.time() - start, 4))\n",
-        "    results['greedy'].append(0)\n",
-        "    results['greedy_time'].append(0)\n",
-        "    \n",
-        "    try:\n",
-        "        start = time.time()\n",
-        "        ilp_ds, ilp_w = ilp_mwdds(vertices_w, edges)\n",
-        "        results['ilp'].append(ilp_w)\n",
-        "        results['ilp_time'].append(round(time.time() - start, 4))\n",
-        "    except Exception as e:\n",
-        "        print(f'ILP failed with error: {e}')\n",
-        "        results['ilp'].append(0)\n",
-        "        results['ilp_time'].append(0)\n",
-        "\n",
-        "current_time = datetime.datetime.now()\n",
-        "formatted_time = current_time.strftime(\"%H-%M_%d-%m-%Y\")\n",
-        "output_csv = f'../results/new/xlarge_results_{formatted_time}.csv'\n",
-        "output_params = f'../results/new/xlarge_ga_params_{formatted_time}.json'\n",
         "\n",
         "save_results_to_csv(results, output_csv)\n",
         "save_params_to_json(output_params, params)"
