--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -19,7 +19,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -29,7 +29,7 @@
         "\n",
         "from main.ilp_model import ilp_mwdds\n",
         "from main.greedy_algorithm import greedy_mwdds\n",
-        "from main.genetic_algorithm import GeneticAlgorithm, fitness_func\n",
+        "from main.genetic_algorithm import GeneticAlgorithm\n",
         "\n",
         "test_instances_pth = '../instances/test_instances/'\n",
         "test_instances = os.listdir(test_instances_pth)\n",
@@ -45,7 +45,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -107,7 +107,7 @@
         "        graph.create_from_data(vertices_w, edges)\n",
         "        \n",
         "        for i in range(10):\n",
-        "            gen_algo = GeneticAlgorithm(graph=graph, fitness_fn=fitness_func, max_time=600, max_no_improvement=30, **params)\n",
+        "            gen_algo = GeneticAlgorithm(graph=graph, max_time=600, max_no_improvement=30, **params)\n",
         "            gen_algo.run()\n",
         "            ga_results.append(gen_algo.previous_best_fitness)\n",
         "            ga_time.append(gen_algo.running_time)\n",
@@ -156,8 +156,8 @@
         "}\n",
         "\n",
         "params = {\n",
-        "    \"n_generations\":300,  \"population_size\":1000, \"selection_method\":'tournament', \"crossover_probability\":0.9, \"mutation_probability\":0.01, \"mutation_increase_factor\":1.5, \"inc_mutation\":60,\n",
-        "    \"n_elite\": 2, \"tournament_size\": 4, \"two_point_crossover_prob\": 0.95\n",
+        "    \"n_generations\":300,  \"population_size\":500, \"selection_method\":'tournament', \"crossover_probability\":0.95, \"mutation_probability\":0.05, \"mutation_increase_factor\":1.5, \"inc_mutation\":60,\n",
+        "    \"n_elite\": 2, \"tournament_size\": 4, \"two_point_crossover_prob\": 0.9\n",
         "}\n",
         "\n",
         "for folder, instances in instances_s_dict.items():\n",
@@ -174,7 +174,7 @@
         "            graph.create_from_data(vertices_w, edges)\n",
         "            \n",
         "            for i in range(10):\n",
-        "                gen_algo = GeneticAlgorithm(graph=graph, fitness_fn=fitness_func, max_time=600, max_no_improvement=300, **params)\n",
+        "                gen_algo = GeneticAlgorithm(graph=graph, max_time=600, max_no_improvement=200, **params)\n",
         "                gen_algo.run()\n",
         "                ga_results.append(gen_algo.previous_best_fitness)\n",
         "                ga_time.append(gen_algo.running_time)\n",
@@ -185,15 +185,19 @@
         "            results['ga_std'].append(round(std(ga_results), 6))\n",
         "            results['ga_time'].append(round(mean(ga_time), 4))\n",
         "\n",
-        "            start = time.time()\n",
-        "            greedy_ds, greedy_w = greedy_mwdds(vertices_w, edges)\n",
-        "            results['greedy'].append(greedy_w)\n",
-        "            results['greedy_time'].append(round(time.time() - start, 4))\n",
+        "            # start = time.time()\n",
+        "            # greedy_ds, greedy_w = greedy_mwdds(vertices_w, edges)\n",
+        "            # results['greedy'].append(greedy_w)\n",
+        "            # results['greedy_time'].append(round(time.time() - start, 4))\n",
         "            \n",
-        "            start = time.time()\n",
-        "            ilp_ds, ilp_w = ilp_mwdds(vertices_w, edges)\n",
-        "            results['ilp'].append(ilp_w)\n",
-        "            results['ilp_time'].append(round(time.time() - start, 4))\n",
+        "            # start = time.time()\n",
+        "            # ilp_ds, ilp_w = ilp_mwdds(vertices_w, edges)\n",
+        "            # results['ilp'].append(ilp_w)\n",
+        "            # results['ilp_time'].append(round(time.time() - start, 4))\n",
+        "            results['greedy'].append(0)\n",
+        "            results['greedy_time'].append(0)\n",
+        "            results['ilp'].append(0)\n",
+        "            results['ilp_time'].append(0)\n",
         "\n",
         "current_time = datetime.datetime.now()\n",
         "formatted_time = current_time.strftime(\"%H-%M_%d-%m-%Y\")\n",
@@ -223,8 +227,8 @@
         "}\n",
         "\n",
         "params = {\n",
-        "    \"n_generations\":600,  \"population_size\":100, \"selection_method\":'tournament', \"crossover_probability\":0.9, \"mutation_probability\":0.01, \"mutation_increase_factor\":1.5, \"inc_mutation\":150,\n",
-        "    \"n_elite\": 2, \"tournament_size\": 4, \"two_point_crossover_prob\": 0.95\n",
+        "    \"n_generations\":500,  \"population_size\":1000, \"selection_method\":'tournament', \"crossover_probability\":0.95, \"mutation_probability\":0.05, \"mutation_increase_factor\":1.5, \"inc_mutation\":70,\n",
+        "    \"n_elite\": 2, \"tournament_size\": 4, \"two_point_crossover_prob\": 0.9\n",
         "}\n",
         "\n",
         "for folder, instances in instances_m_dict.items():\n",
@@ -240,8 +244,8 @@
         "            graph = Graph()\n",
         "            graph.create_from_data(vertices_w, edges)\n",
         "            \n",
-        "            for i in range(10):\n",
-        "                gen_algo = GeneticAlgorithm(graph=graph, fitness_fn=fitness_func, max_time=600, max_no_improvement=600, **params)\n",
+        "            for i in range(5):\n",
+        "                gen_algo = GeneticAlgorithm(graph=graph, max_time=600, max_no_improvement=350, **params)\n",
         "                gen_algo.run()\n",
         "                ga_results.append(gen_algo.previous_best_fitness)\n",
         "                ga_time.append(gen_algo.running_time)\n",
@@ -252,15 +256,19 @@
         "            results['ga_std'].append(round(std(ga_results), 6))\n",
         "            results['ga_time'].append(round(mean(ga_time), 4))\n",
         "\n",
-        "            start = time.time()\n",
-        "            greedy_ds, greedy_w = greedy_mwdds(vertices_w, edges)\n",
-        "            results['greedy'].append(greedy_w)\n",
-        "            results['greedy_time'].append(round(time.time() - start, 4))\n",
+        "            # start = time.time()\n",
+        "            # greedy_ds, greedy_w = greedy_mwdds(vertices_w, edges)\n",
+        "            # results['greedy'].append(greedy_w)\n",
+        "            # results['greedy_time'].append(round(time.time() - start, 4))\n",
         "            \n",
-        "            start = time.time()\n",
-        "            ilp_ds, ilp_w = ilp_mwdds(vertices_w, edges)\n",
-        "            results['ilp'].append(ilp_w)\n",
-        "            results['ilp_time'].append(round(time.time() - start, 4))\n",
+        "            # start = time.time()\n",
+        "            # ilp_ds, ilp_w = ilp_mwdds(vertices_w, edges)\n",
+        "            # results['ilp'].append(ilp_w)\n",
+        "            # results['ilp_time'].append(round(time.time() - start, 4))\n",
+        "            results['greedy'].append(0)\n",
+        "            results['greedy_time'].append(0)\n",
+        "            results['ilp'].append(0)\n",
+        "            results['ilp_time'].append(0)\n",
         "\n",
         "current_time = datetime.datetime.now()\n",
         "formatted_time = current_time.strftime(\"%H-%M_%d-%m-%Y\")\n",
@@ -308,26 +316,26 @@
         "            graph.create_from_data(vertices_w, edges)\n",
         "            \n",
         "            for i in range(10):\n",
-        "                gen_algo = GeneticAlgorithm(graph=graph, fitness_fn=fitness_func, max_time=600, max_no_improvement=1000, **params)\n",
+        "                gen_algo = GeneticAlgorithm(graph=graph, max_time=600, max_no_improvement=1000, **params)\n",
         "                gen_algo.run()\n",
         "                ga_results.append(gen_algo.previous_best_fitness)\n",
         "                ga_time.append(gen_algo.running_time)\n",
         "                print(f'Finished {i+1} of 10 in {gen_algo.running_time} s')\n",
         "\n",
-        "            results['ga_mean'].append(round(mean(ga_results), 6))\n",
-        "            results['ga_max'].append(max(ga_results))            \n",
-        "            results['ga_std'].append(round(std(ga_results), 6))\n",
-        "            results['ga_time'].append(round(mean(ga_time), 4))\n",
+        "            # start = time.time()\n",
+        "            # greedy_ds, greedy_w = greedy_mwdds(vertices_w, edges)\n",
+        "            # results['greedy'].append(greedy_w)\n",
+        "            # results['greedy_time'].append(round(time.time() - start, 4))\n",
         "            \n",
-        "            start = time.time()\n",
-        "            greedy_ds, greedy_w = greedy_mwdds(vertices_w, edges)\n",
-        "            results['greedy'].append(greedy_w)\n",
-        "            results['greedy_time'].append(round(time.time() - start, 4))\n",
-        "            \n",
-        "            start = time.time()\n",
-        "            ilp_ds, ilp_w = ilp_mwdds(vertices_w, edges)\n",
-        "            results['ilp'].append(ilp_w)\n",
-        "            results['ilp_time'].append(round(time.time() - start, 4))\n",
+        "            # start = time.time()\n",
+        "            # ilp_ds, ilp_w = ilp_mwdds(vertices_w, edges)\n",
+        "            # results['ilp'].append(ilp_w)\n",
+        "            # results['ilp_time'].append(round(time.time() - start, 4))\n",
+        "            print(ga_results)\n",
+        "            results['greedy'].append(0)\n",
+        "            results['greedy_time'].append(0)\n",
+        "            results['ilp'].append(0)\n",
+        "            results['ilp_time'].append(0)\n",
         "\n",
         "current_time = datetime.datetime.now()\n",
         "formatted_time = current_time.strftime(\"%H-%M_%d-%m-%Y\")\n",
