--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -91,28 +91,97 @@
         "}\n",
         "\n",
         "params = {\n",
-        "    \"n_generations\":100,  \"population_size\":100, \"selection_method\":'tournament', \"crossover_probability\":0.9, \"mutation_probability\":0.01, \"mutation_increase_factor\":1.5, \"inc_mutation\":20,\n",
-        "    \"n_elite\": 2, \"tournament_size\": 3, \"two_point_crossover_prob\": 0.8\n",
+        "    \"n_generations\":100,  \"population_size\":100, \"selection_method\":'tournament', \"crossover_probability\":0.95, \"mutation_probability\":0.1, \"mutation_increase_factor\":1.5, \"inc_mutation\":20,\n",
+        "    \"n_elite\": 1, \"tournament_size\": 4, \"two_point_crossover_prob\": 0.95\n",
         "}\n",
         "\n",
         "for instance in test_instances:\n",
-        "        print(f'Running instance {instance}...')\n",
-        "        vertices_w, edges = read_graph_instance(instance)\n",
+        "    print(f'Running instance {instance}...')\n",
+        "    vertices_w, edges = read_graph_instance(instance)\n",
         "\n",
-        "        results['instance'].append(\"test\")\n",
+        "    results['instance'].append(\"test\")\n",
+        "\n",
+        "    ga_results = []\n",
+        "    ga_time = []\n",
+        "    graph = Graph()\n",
+        "    graph.create_from_data(vertices_w, edges)\n",
+        "    \n",
+        "    n = 10\n",
+        "    for i in range(n):\n",
+        "        gen_algo = GeneticAlgorithm(graph=graph, max_time=600, max_no_improvement=50, **params)\n",
+        "        gen_algo.run()\n",
+        "        ga_results.append(gen_algo.previous_best_fitness)\n",
+        "        ga_time.append(gen_algo.running_time)\n",
+        "        print(f'Finished {i+1} of {n} in {gen_algo.running_time} s')\n",
+        "\n",
+        "    results['ga_mean'].append(round(mean(ga_results),6))\n",
+        "    results['ga_max'].append(max(ga_results))\n",
+        "    results['ga_std'].append(round(std(ga_results), 6))\n",
+        "    results['ga_time'].append(round(mean(ga_time), 4))\n",
+        "\n",
+        "    start = time.time()\n",
+        "    greedy_ds, greedy_w = greedy_mwdds(vertices_w, edges)\n",
+        "    results['greedy'].append(greedy_w)\n",
+        "    results['greedy_time'].append(round(time.time() - start, 4))\n",
+        "    \n",
+        "    start = time.time()\n",
+        "    ilp_ds, ilp_w = ilp_mwdds(vertices_w, edges)\n",
+        "    results['ilp'].append(ilp_w)\n",
+        "    results['ilp_time'].append(round(time.time() - start, 4))\n",
+        "\n",
+        "current_time = datetime.datetime.now()\n",
+        "formatted_time = current_time.strftime(\"%H-%M_%d-%m-%Y\")\n",
+        "output_csv = f'../results/new_res/test_results_{formatted_time}.csv'\n",
+        "output_params = f'../results/params/test_ga_params_{formatted_time}.json'\n",
+        "\n",
+        "save_results_to_csv(results, output_csv)\n",
+        "save_params_to_json(output_params, params)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "results = {\n",
+        "    'instance': [],\n",
+        "    'ga_mean': [],\n",
+        "    'ga_max': [],\n",
+        "    'ga_std': [],\n",
+        "    'ga_time': [],\n",
+        "    'greedy': [],\n",
+        "    'greedy_time': [],\n",
+        "    'ilp': [],\n",
+        "    'ilp_time': []\n",
+        "}\n",
+        "\n",
+        "params = {\n",
+        "    \"n_generations\":150,  \"population_size\":100, \"selection_method\":'tournament', \"crossover_probability\":0.95, \"mutation_probability\":0.1, \"mutation_increase_factor\":1.5, \"inc_mutation\":30,\n",
+        "    \"n_elite\": 2, \"tournament_size\": 4, \"two_point_crossover_prob\": 0.95\n",
+        "}\n",
+        "\n",
+        "for folder, instances in instances_s_dict.items():\n",
+        "    for i in instances:\n",
+        "        print(f'Running instance {i}...')\n",
+        "        instance_pth = os.path.join(instances_s_pth, folder, i)\n",
+        "        vertices_w, edges = read_rakaj_graph_instance(instance_pth)\n",
+        "\n",
+        "        results['instance'].append(folder)\n",
         "\n",
         "        ga_results = []\n",
         "        ga_time = []\n",
         "        graph = Graph()\n",
         "        graph.create_from_data(vertices_w, edges)\n",
-        "        \n",
-        "        for i in range(10):\n",
-        "            gen_algo = GeneticAlgorithm(graph=graph, max_time=600, max_no_improvement=30, **params)\n",
+        "\n",
+        "        n = 10\n",
+        "        for i in range(n):\n",
+        "            gen_algo = GeneticAlgorithm(graph=graph, max_time=600, max_no_improvement=150, **params)\n",
         "            gen_algo.run()\n",
         "            ga_results.append(gen_algo.previous_best_fitness)\n",
         "            ga_time.append(gen_algo.running_time)\n",
-        "            print(f'Finished {i+1} of 10 in {gen_algo.running_time} s')\n",
-        "    \n",
+        "            print(f'Finished {i+1} of {n} in {gen_algo.running_time} s')\n",
+        "\n",
         "        results['ga_mean'].append(round(mean(ga_results),6))\n",
         "        results['ga_max'].append(max(ga_results))\n",
         "        results['ga_std'].append(round(std(ga_results), 6))\n",
@@ -130,8 +199,8 @@
         "\n",
         "current_time = datetime.datetime.now()\n",
         "formatted_time = current_time.strftime(\"%H-%M_%d-%m-%Y\")\n",
-        "output_csv = f'../results/new/test_results_{formatted_time}.csv'\n",
-        "output_params = f'../results/new/test_ga_params_{formatted_time}.json'\n",
+        "output_csv = f'../results/new_res/small_results_{formatted_time}.csv'\n",
+        "output_params = f'../results/params/small_ga_params_{formatted_time}.json'\n",
         "\n",
         "save_results_to_csv(results, output_csv)\n",
         "save_params_to_json(output_params, params)"
@@ -156,124 +225,50 @@
         "}\n",
         "\n",
         "params = {\n",
-        "    \"n_generations\":300,  \"population_size\":500, \"selection_method\":'tournament', \"crossover_probability\":0.95, \"mutation_probability\":0.05, \"mutation_increase_factor\":1.5, \"inc_mutation\":60,\n",
-        "    \"n_elite\": 2, \"tournament_size\": 4, \"two_point_crossover_prob\": 0.9\n",
-        "}\n",
-        "\n",
-        "for folder, instances in instances_s_dict.items():\n",
-        "        for i in instances:\n",
-        "            print(f'Running instance {i}...')\n",
-        "            instance_pth = os.path.join(instances_s_pth, folder, i)\n",
-        "            vertices_w, edges = read_rakaj_graph_instance(instance_pth)\n",
-        "\n",
-        "            results['instance'].append(folder)\n",
-        "\n",
-        "            ga_results = []\n",
-        "            ga_time = []\n",
-        "            graph = Graph()\n",
-        "            graph.create_from_data(vertices_w, edges)\n",
-        "            \n",
-        "            for i in range(10):\n",
-        "                gen_algo = GeneticAlgorithm(graph=graph, max_time=600, max_no_improvement=200, **params)\n",
-        "                gen_algo.run()\n",
-        "                ga_results.append(gen_algo.previous_best_fitness)\n",
-        "                ga_time.append(gen_algo.running_time)\n",
-        "                print(f'Finished {i+1} of 10 in {gen_algo.running_time} s')\n",
-        "\n",
-        "            results['ga_mean'].append(round(mean(ga_results),6))\n",
-        "            results['ga_max'].append(max(ga_results))\n",
-        "            results['ga_std'].append(round(std(ga_results), 6))\n",
-        "            results['ga_time'].append(round(mean(ga_time), 4))\n",
-        "\n",
-        "            # start = time.time()\n",
-        "            # greedy_ds, greedy_w = greedy_mwdds(vertices_w, edges)\n",
-        "            # results['greedy'].append(greedy_w)\n",
-        "            # results['greedy_time'].append(round(time.time() - start, 4))\n",
-        "            \n",
-        "            # start = time.time()\n",
-        "            # ilp_ds, ilp_w = ilp_mwdds(vertices_w, edges)\n",
-        "            # results['ilp'].append(ilp_w)\n",
-        "            # results['ilp_time'].append(round(time.time() - start, 4))\n",
-        "            results['greedy'].append(0)\n",
-        "            results['greedy_time'].append(0)\n",
-        "            results['ilp'].append(0)\n",
-        "            results['ilp_time'].append(0)\n",
-        "\n",
-        "current_time = datetime.datetime.now()\n",
-        "formatted_time = current_time.strftime(\"%H-%M_%d-%m-%Y\")\n",
-        "output_csv = f'../results/new/small_results_{formatted_time}.csv'\n",
-        "output_params = f'../results/new/small_ga_params_{formatted_time}.json'\n",
-        "\n",
-        "save_results_to_csv(results, output_csv)\n",
-        "save_params_to_json(output_params, params)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "results = {\n",
-        "    'instance': [],\n",
-        "    'ga_mean': [],\n",
-        "    'ga_max': [],\n",
-        "    'ga_std': [],\n",
-        "    'ga_time': [],\n",
-        "    'greedy': [],\n",
-        "    'greedy_time': [],\n",
-        "    'ilp': [],\n",
-        "    'ilp_time': []\n",
-        "}\n",
-        "\n",
-        "params = {\n",
-        "    \"n_generations\":500,  \"population_size\":1000, \"selection_method\":'tournament', \"crossover_probability\":0.95, \"mutation_probability\":0.05, \"mutation_increase_factor\":1.5, \"inc_mutation\":70,\n",
-        "    \"n_elite\": 2, \"tournament_size\": 4, \"two_point_crossover_prob\": 0.9\n",
+        "    \"n_generations\":300,  \"population_size\":500, \"selection_method\":'tournament', \"crossover_probability\":0.95, \"mutation_probability\":0.1, \"mutation_increase_factor\":1.5, \"inc_mutation\":40,\n",
+        "    \"n_elite\": 2, \"tournament_size\": 4, \"two_point_crossover_prob\": 0.95\n",
         "}\n",
         "\n",
         "for folder, instances in instances_m_dict.items():\n",
-        "        for i in instances:\n",
-        "            print(f'Running instance {i}...')\n",
-        "            instance_pth = os.path.join(instances_m_pth, folder, i)\n",
-        "            vertices_w, edges = read_rakaj_graph_instance(instance_pth)\n",
-        "            \n",
-        "            results['instance'].append(folder)\n",
+        "    for i in instances:\n",
+        "        print(f'Running instance {i}...')\n",
+        "        instance_pth = os.path.join(instances_m_pth, folder, i)\n",
+        "        vertices_w, edges = read_rakaj_graph_instance(instance_pth)\n",
+        "        \n",
+        "        results['instance'].append(folder)\n",
         "\n",
-        "            ga_results = []\n",
-        "            ga_time = []\n",
-        "            graph = Graph()\n",
-        "            graph.create_from_data(vertices_w, edges)\n",
-        "            \n",
-        "            for i in range(5):\n",
-        "                gen_algo = GeneticAlgorithm(graph=graph, max_time=600, max_no_improvement=350, **params)\n",
-        "                gen_algo.run()\n",
-        "                ga_results.append(gen_algo.previous_best_fitness)\n",
-        "                ga_time.append(gen_algo.running_time)\n",
-        "                print(f'Finished {i+1} of 10 in {gen_algo.running_time} s')\n",
+        "        ga_results = []\n",
+        "        ga_time = []\n",
+        "        graph = Graph()\n",
+        "        graph.create_from_data(vertices_w, edges)\n",
+        "        \n",
+        "        n = 10\n",
+        "        for i in range(n):\n",
+        "            gen_algo = GeneticAlgorithm(graph=graph, max_time=600, max_no_improvement=300, **params)\n",
+        "            gen_algo.run()\n",
+        "            ga_results.append(gen_algo.previous_best_fitness)\n",
+        "            ga_time.append(gen_algo.running_time)\n",
+        "            print(f'Finished {i+1} of {n} in {gen_algo.running_time} s')\n",
         "\n",
-        "            results['ga_mean'].append(round(mean(ga_results), 6))\n",
-        "            results['ga_max'].append(max(ga_results))\n",
-        "            results['ga_std'].append(round(std(ga_results), 6))\n",
-        "            results['ga_time'].append(round(mean(ga_time), 4))\n",
+        "        results['ga_mean'].append(round(mean(ga_results), 6))\n",
+        "        results['ga_max'].append(max(ga_results))\n",
+        "        results['ga_std'].append(round(std(ga_results), 6))\n",
+        "        results['ga_time'].append(round(mean(ga_time), 4))\n",
         "\n",
-        "            # start = time.time()\n",
-        "            # greedy_ds, greedy_w = greedy_mwdds(vertices_w, edges)\n",
-        "            # results['greedy'].append(greedy_w)\n",
-        "            # results['greedy_time'].append(round(time.time() - start, 4))\n",
-        "            \n",
-        "            # start = time.time()\n",
-        "            # ilp_ds, ilp_w = ilp_mwdds(vertices_w, edges)\n",
-        "            # results['ilp'].append(ilp_w)\n",
-        "            # results['ilp_time'].append(round(time.time() - start, 4))\n",
-        "            results['greedy'].append(0)\n",
-        "            results['greedy_time'].append(0)\n",
-        "            results['ilp'].append(0)\n",
-        "            results['ilp_time'].append(0)\n",
+        "        start = time.time()\n",
+        "        greedy_ds, greedy_w = greedy_mwdds(vertices_w, edges)\n",
+        "        results['greedy'].append(greedy_w)\n",
+        "        results['greedy_time'].append(round(time.time() - start, 4))\n",
+        "        \n",
+        "        start = time.time()\n",
+        "        ilp_ds, ilp_w = ilp_mwdds(vertices_w, edges)\n",
+        "        results['ilp'].append(ilp_w)\n",
+        "        results['ilp_time'].append(round(time.time() - start, 4))\n",
         "\n",
         "current_time = datetime.datetime.now()\n",
         "formatted_time = current_time.strftime(\"%H-%M_%d-%m-%Y\")\n",
-        "output_csv = f'../results/new/medium_results_{formatted_time}.csv'\n",
-        "output_params = f'../results/new/medium_ga_params_{formatted_time}.json'\n",
+        "output_csv = f'../results/new_res/medium_results_{formatted_time}.csv'\n",
+        "output_params = f'../results/params/medium_ga_params_{formatted_time}.json'\n",
         "\n",
         "save_results_to_csv(results, output_csv)\n",
         "save_params_to_json(output_params, params)"
@@ -298,49 +293,51 @@
         "}\n",
         "\n",
         "params = {\n",
-        "    \"n_generations\":1000,  \"population_size\":1000, \"selection_method\":'tournament', \"crossover_probability\":0.9, \"mutation_probability\":0.01, \"mutation_increase_factor\":1.5, \"inc_mutation\":200,\n",
+        "    \"n_generations\":600,  \"population_size\":1000, \"selection_method\":'tournament', \"crossover_probability\":0.95, \"mutation_probability\":0.1, \"mutation_increase_factor\":1.5, \"inc_mutation\":70,\n",
         "    \"n_elite\": 2, \"tournament_size\": 4, \"two_point_crossover_prob\": 0.95\n",
         "}\n",
         "\n",
         "for folder, instances in instances_l_dict.items():\n",
-        "        for i in instances:\n",
-        "            print(f'Running instance {i}...')\n",
-        "            instance_pth = os.path.join(instances_l_pth, folder, i)\n",
-        "            vertices_w, edges = read_rakaj_graph_instance(instance_pth)\n",
+        "    for i in instances:\n",
+        "        print(f'Running instance {i}...')\n",
+        "        instance_pth = os.path.join(instances_l_pth, folder, i)\n",
+        "        vertices_w, edges = read_rakaj_graph_instance(instance_pth)\n",
         "\n",
-        "            results['instance'].append(folder)\n",
+        "        results['instance'].append(folder)\n",
         "\n",
-        "            ga_results = []\n",
-        "            ga_time = []\n",
-        "            graph = Graph()\n",
-        "            graph.create_from_data(vertices_w, edges)\n",
-        "            \n",
-        "            for i in range(10):\n",
-        "                gen_algo = GeneticAlgorithm(graph=graph, max_time=600, max_no_improvement=1000, **params)\n",
-        "                gen_algo.run()\n",
-        "                ga_results.append(gen_algo.previous_best_fitness)\n",
-        "                ga_time.append(gen_algo.running_time)\n",
-        "                print(f'Finished {i+1} of 10 in {gen_algo.running_time} s')\n",
+        "        ga_results = []\n",
+        "        ga_time = []\n",
+        "        graph = Graph()\n",
+        "        graph.create_from_data(vertices_w, edges)\n",
+        "        \n",
+        "        n = 10\n",
+        "        for i in range(n):\n",
+        "            gen_algo = GeneticAlgorithm(graph=graph, max_time=600, max_no_improvement=600, **params)\n",
+        "            gen_algo.run()\n",
+        "            ga_results.append(gen_algo.previous_best_fitness)\n",
+        "            ga_time.append(gen_algo.running_time)\n",
+        "            print(f'Finished {i+1} of {n} in {gen_algo.running_time} s')\n",
         "\n",
-        "            # start = time.time()\n",
-        "            # greedy_ds, greedy_w = greedy_mwdds(vertices_w, edges)\n",
-        "            # results['greedy'].append(greedy_w)\n",
-        "            # results['greedy_time'].append(round(time.time() - start, 4))\n",
-        "            \n",
-        "            # start = time.time()\n",
-        "            # ilp_ds, ilp_w = ilp_mwdds(vertices_w, edges)\n",
-        "            # results['ilp'].append(ilp_w)\n",
-        "            # results['ilp_time'].append(round(time.time() - start, 4))\n",
-        "            print(ga_results)\n",
-        "            results['greedy'].append(0)\n",
-        "            results['greedy_time'].append(0)\n",
-        "            results['ilp'].append(0)\n",
-        "            results['ilp_time'].append(0)\n",
+        "        results['ga_mean'].append(round(mean(ga_results), 6))\n",
+        "        results['ga_max'].append(max(ga_results))\n",
+        "        results['ga_std'].append(round(std(ga_results), 6))\n",
+        "        results['ga_time'].append(round(mean(ga_time), 4))\n",
+        "        print(ga_results)\n",
+        "\n",
+        "        start = time.time()\n",
+        "        greedy_ds, greedy_w = greedy_mwdds(vertices_w, edges)\n",
+        "        results['greedy'].append(greedy_w)\n",
+        "        results['greedy_time'].append(round(time.time() - start, 4))\n",
+        "        \n",
+        "        start = time.time()\n",
+        "        ilp_ds, ilp_w = ilp_mwdds(vertices_w, edges)\n",
+        "        results['ilp'].append(ilp_w)\n",
+        "        results['ilp_time'].append(round(time.time() - start, 4))\n",
         "\n",
         "current_time = datetime.datetime.now()\n",
         "formatted_time = current_time.strftime(\"%H-%M_%d-%m-%Y\")\n",
-        "output_csv = f'../results/new/large_results_{formatted_time}.csv'\n",
-        "output_params = f'../results/new/large_ga_params_{formatted_time}.json'\n",
+        "output_csv = f'../results/new_res/large_results_{formatted_time}.csv'\n",
+        "output_params = f'../results/params/large_ga_params_{formatted_time}.json'\n",
         "\n",
         "save_results_to_csv(results, output_csv)\n",
         "save_params_to_json(output_params, params)"
